2000-12-01  Martin Baulig  <baulig@suse.de>

	Released gnome-common 1.2.1.

2000-11-21  Martin Baulig  <martin@home-of-linux.org>

	* configure.in: Set version number to 1.2.1.

	* configure.in (--enable-platform-gnome-2): New configure
	command line argument to enable support for the GNOME 2.x
	platform.
	(PLATFORM_GNOME_2): New automake conditional.
	* Do the GNOME_SUPPORT_CHECKS here if we're on the GNOME 2.x
	platform.

	* Makefile.am (SUBDIRS): Conditionally add support for the
	GNOME 2.x platform.

	* acinclude.m4: New file. Put stuff from gnome-support.m4
	and need-declaration.m4 here.

2000-05-29  Martin Baulig  <baulig@suse.de>

	* configure.in: Set version number to 1.2.0.

1998-02-19  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: New sample file.
	* configure.in: Likewise.
	* Makefile.am: Likewise.
	* README: Likewise.
