@@ -1,0 +1,116 @@
+# Note this is NOT a relocatable thing :)
+%define name		gnome-common
+%define ver		@VERSION@
+%define RELEASE		0_cvs_0
+%define rel		%{?CUSTOM_RELEASE} %{!?CUSTOM_RELEASE:%RELEASE}
+%define prefix		/usr
+%define sysconfdir	/etc
+
+Name:		%name
+Summary:	gnome-common contains usefull things common to building gnome packages
+Version: 	%ver
+Distribution:	GNOME
+Vendor:		CVS
+Release: 	%rel
+Copyright: 	GPL
+Group:		Development/Tools
+Source: 	%{name}-%{ver}.tar.gz
+URL: 		http://gnome.org
+BuildRoot:	/var/tmp/%{name}-%{ver}-root
+Docdir: 	%{prefix}/doc
+
+%description
+gnome-common is for developing various GNOME modules that have to do similar things
+
+%package devel
+Summary:	Libraries and include files for developing gnome-common based tools
+Group:		Development/Libraries
+Requires:	%name = %{PACKAGE_VERSION}
+Obsoletes:	%{name}-devel
+
+%package support
+Summary:	gnome-common support applications
+Group:		Development/Tools
+Requires:	%name = %{PACKAGE_VERSION}
+Obsoletes:	%{name}-devel
+
+%description devel
+This package provides the necessary development libraries and include
+files to allow you to develop components that make use of gnome-common source
+
+%description support
+These are supporting applications for using gnome-common
+
+%changelog
+* Mon Mar 26 2000 Robin * Slomkowski <rslomkow@rslomkow.org>
+- created this thing, and replaced the generic specfile
+
+%prep
+%setup
+
+%build
+%ifarch alpha
+  MYARCH_FLAGS="--host=alpha-redhat-linux"
+%endif
+
+LC_ALL=""
+LINGUAS=""
+LANG=""
+export LC_ALL LINGUAS LANG
+
+CFLAGS="$RPM_OPT_FLAGS" ./configure $MYARCH_FLAGS \
+	--prefix=%{prefix} \
+	--enable-platform-gnome-2 \
+	--sysconfdir=%{sysconfdir}
+
+if [ "$SMP" != "" ]; then
+  (make "MAKE=make -k -j $SMP"; exit 0)
+  make
+else
+  make
+fi
+
+%install
+[ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
+
+make prefix=$RPM_BUILD_ROOT%{prefix} sysconfdir=$RPM_BUILD_ROOT%{sysconfdir} install
+
+for FILE in "$RPM_BUILD_ROOT/bin/*"; do
+	file "$FILE" | grep -q not\ stripped && strip $FILE
+done
+
+%clean
+[ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
+
+%post
+if ! grep %{prefix}/lib /etc/ld.so.conf > /dev/null ; then
+  echo "%{prefix}/lib" >> /etc/ld.so.conf
+fi
+  
+/sbin/ldconfig
+  
+%postun -p /sbin/ldconfig
+
+%files
+
+%defattr(0555, bin, bin)
+%{prefix}/bin/*
+
+%defattr (0444, bin, bin)
+%{prefix}/lib/pkgconfig/*common*.pc
+%{prefix}/share/aclocal/gnome-macros/*.m4
+%{prefix}/share/aclocal/gnome2-macros/*.m4
+
+%files devel
+
+%defattr(0555, bin, bin)
+%{prefix}/lib/*support*a
+
+%files support
+
+%defattr(0444, bin, bin)
+%{prefix}/include/gnome/*/*support*.h
+%{prefix}/lib/pkgconfig/*support*.pc
+
+%defattr(0555, bin, bin)
+%{prefix}/lib/*support*.so*
